# freeflow-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh  start_vagrant.sh
flowctl/: CMakeLists.txt  README.md  dataplane.cpp  dataplane.hpp  main.cpp  port.cpp  port.hpp  util.cpp  util.hpp
flowmgr/: CMakeLists.txt  README.md  control.cpp  control.hpp  dataplane.cpp  dataplane.hpp  device.cpp  device.hpp  dispatch.cpp  dispatch.hpp  main.cpp  port.cpp  port.hpp  request.cpp  request.hpp  switch.cpp  switch.hpp  utility.cpp  utility.hpp
flowmgr/tests/: CMakeLists.txt  device.cpp
flowpath/: CMakeLists.txt  README.md  dataplane.c  dataplane.h  error.c  error.h  flow.c  flow.h  hash.c  hash.h  main.c  manage.c  manage.h  packet.c  packet.h  pipeline.c  pipeline.h  port.c  port.h  port_nadk.c  port_nadk.h  port_netmap.c  port_netmap.h  port_pcap.c  port_pcap.h  port_udp.c  port_udp.h  proto.c  proto.h  trie.c  trie.h  types.c  types.h  util.c  util.h
flowpath/doc/: notes.md  pipeline.md  stages.md
flowpath/doc/old/: EXTRACT.md  key-extract.md  translation.md
flowpath/examples/x-connect/: Makefile  key.h  util.h  x-connect.c
flowpath/pipelines/: CMakeLists.txt
flowpath/pipelines/wire/: wire.c
flowpath/tests/: CMakeLists.txt  makefile  test-nadk.c  test-util-ring.c  test-wire.c  udp.c  unit_test.c
freeflow/: CMakeLists.txt  README.md  async.cpp  async.hpp  capture.cpp  capture.hpp  format.cpp  format.hpp  ip.cpp  ip.hpp  json.cpp  json.hpp  memory.cpp  memory.hpp  poll.cpp  poll.hpp  socket.cpp  socket.hpp  system.cpp
freeflow/examples/: CMakeLists.txt
freeflow/examples/capture/: reader.cpp
freeflow/examples/unix-sockets/: echo-server.cpp
freeflow/test/: CMakeLists.txt  json-bench.cpp  json-parse.cpp  json.cpp
scripts/: sample-nping.sh  simple-pktgen.sh
traffic-gen/: CMakeLists.txt  frame.cpp  frame.hpp  main.cpp
